[CXF-7886]remove unnecessary JVM flags in pom.xml with JDK11